public/styles/new-tweet.css
.new-tweet {
  display: none;
  width: 100%;
  flex-direction: column;
  margin-top: 3rem;
  font-weight: bold;

  #new-tweet-form {

    #new-tweet-text.red-border-bottom {
      border-bottom: #ff0000 0.2em solid;
    }
    
    #new-tweet-text.dark-border-bottom {
    border-bottom: #393731 0.2em solid;
    }
    
    #new-tweet-text {
      width: 100%;
      height: 50px;
      resize: none;
      border: none;
      color: #393731;
      font-weight: regular;
      background-color: #f4f1ec;
    }
    .tweet-ui {
      display: flex;
      justify-content: space-between;
      font-family: "Bungee", sans-serif;
      font-size: 1rem;
      margin-top: 0.5rem;
      .submit-tweet {
        padding: 0.25rem 0.5rem;
        border: none;
        background-color: #4056a1;
        color: #ffff;
      }
      .counter {
        padding: 0.175em 0rem;
        font-family: inherit;
        font-size: 1rem;
      }
    }
  
    #invalid-text-alert {
      display: none;
      color: red;
      font-size: 0.8rem;
    }
    
  }
}

/* desktop styles */
@media only screen and (min-width: 1024px) {
  .new-tweet {
    margin: 0;
    margin-bottom: 3rem;
  }
}

